--- a/styles/footer.css
+++ b/styles/footer.css
@@ -46,6 +46,7 @@
         background-color: #e9e9ee;
     }
     .footer__social-link:hover > a {
+        transition: background-color 0.3s ease 0s;
         background-color: #000000;
     }
 }
@@ -60,9 +61,6 @@
 .footer__rights {
     font-size: 12px;
     line-height: calc(22 / 12);
-}
-
-@media screen and (min-width: 320px) {
 }
 @media screen and (min-width: 768px) {
     .footer {
