--- a/styles/about.css
+++ b/styles/about.css
@@ -4,7 +4,7 @@
 .about__body {
     padding: 20px 18px;
     background-color: rgba(240, 99, 184, 0.15);
-    border-radius: 50px;
+    border-radius: var(--main-border-radius);
     text-align: center;
     display: grid;
     grid-template-areas:
