--- a/styles/footer.css
+++ b/styles/footer.css
@@ -11,7 +11,8 @@
     margin: 20px 0px 10px 0px;
 }
 .footer__title {
-    font-size: 700;
+    font-weight: 700;
+    font-size: 20px;
 }
 .footer__info {
     line-height: calc(29 / 16);
