--- a/styles/testimonials.css
+++ b/styles/testimonials.css
@@ -8,8 +8,8 @@
 }
 .testimonials__body {
     padding: 5vw 0px 4vw 6vw;
-    background-color: #9c69e2;
-    border-radius: 50px;
+    background-color: var(--c-light);
+    border-radius: var(--main-border-radius);
 }
 .testimonials__title {
     margin: 0 0 4vw 0;
@@ -21,7 +21,7 @@
 }
 .slider__slide {
     flex: 0 0 100%;
-    background-color: #fff;
+    background-color: var(--bg-main);
     box-shadow: 0px 10px 0px 0px rgba(0, 0, 0, 0.25);
     border-radius: 20px;
     padding-bottom: 20px;
@@ -47,7 +47,7 @@
     margin-bottom: 10px;
 }
 .cllient__link {
-    color: #9c69e2;
+    color: var(--c-light);
     margin: 0px 0px 40px 0px;
 }
 .cllient__review {
@@ -72,7 +72,7 @@
 .slider__bulet--active {
     width: 10px;
     height: 10px;
-    background-color: #fff;
+    background-color: var(--bg-main);
 }
 .slider__arrows .arrow {
     padding: 20px;
@@ -88,7 +88,7 @@
 .slider__arrows .arrow span,
 .slider__arrows .arrow span:after,
 .slider__arrows .arrow span::before {
-    background-color: #fff;
+    background-color: var(--bg-main);
 }
 
 @media (any-hover: hover) {
@@ -102,7 +102,7 @@
     .slider__arrows .arrow:hover span,
     .slider__arrows .arrow:hover span::after,
     .slider__arrows .arrow:hover span::before {
-        background-color: #fff;
+        background-color: var(--bg-main);
         opacity: 1;
     }
 }
