--- a/styles/index.css
+++ b/styles/index.css
@@ -1,4 +1,4 @@
-@import url("_variables.css");
+@import url("variables.css");
 @import url("null.css");
 @import url("common.css");
 @import url("ui.css");
